[tool.poetry]
name = "audius-py"
version = "0.1.1"
description = "An SDK for the Audius platform"
authors = ["Juliya Smith <juliya@juliyasmith.com>"]
include = ["audius"]
exclude = ["tests"]
packages = [{ include = "audius" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.13,<4"
requests = "^2.28.2"
click = ">=8.1.3,<9"
tqdm = "^4.65.0"
python-vlc = "^3.0.18121"

# Lint
black = {version = "^22.12.0", optional = true}
isort = {version = "^5.12.0", optional = true}
flake8 = {version = "^5.0.4", optional = true}

# Type-checking
mypy = {version = "^0.991", optional = true}
types-requests = {version = "^2.28.9", optional = true}

# Release
twine = {version = "^3.8.0", optional = true}
wheel = {version = "^0.38.1", optional = true}
packaging = {version = "^21.3", optional = true}

[tool.poetry.extras]
lint = ["black", "isort", "flake8", "mypy"]
types = ["mypy", "types-requests"]
release = ["twine", "wheel", "packaging"]

[tool.poetry.scripts]
audius = "audius.cli:audius"

[tool.mypy]
exclude = "build/"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
