[project]
name = "audius-py"
version = "0.1.1"
description = "An SDK for the Audius platform"
authors = [{name="Juliya Smith", email="juliya@juliyasmith.com"}]

dependencies = [
    "requests>=2.0,<3",
    "click>=8.1.3,<8.2",
    "tqdm>=4.0.0,<5",
    "python-vlc>=3.0.18121,<3.1",
]

[project.optional-dependencies]
lint = ["black", "isort", "mypy", "flake8", "types-requests"]

[project.scripts]
audius = "audius.cli:audius"

[tool.mypy]
exclude = "build/"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
